compilateurDeca/src/test/deca/codegen/invalid/avec_objet/axe1/div_zero_float.deca
// Description:
//    Division flottante par 0.0.
//
// Resultats:
//    Erreur : division par zero
// 
// Historique:
//    cree le 14/01/2026

{
    float f = 1.0 / 0.0;
    println("Echec : division par 0.0 non detectee");
}
